Kelsey Development Sandbox/src/objects/DS_Background_Family_Info_F__c.object
<CustomObject>
    <fields>
        <fullName>FNTHOSPRU__c</fullName>
        <description>5b. Number of nights hospital for mental health care Refused/UK</description>
        <label>FNTHOSPRU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNTJAILN__c</fullName>
        <description>5d. Number of nights spent in a correctional facility, including juvenile detention, jail, or prison</description>
        <label>FNTJAILN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FNTJAILRU__c</fullName>
        <description>5d. Number of nights spent in a correctional facility, including juvenile detention, jail, or prison Refused/UK</description>
        <label>FNTJAILRU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNTTOTN__c</fullName>
        <description>SUM of Total number of nights spent homeless, in the hospital for MH care, in Detox, or correctional facility last 30 days</description>
        <label>FNTTOTN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FNZCODESP__c</fullName>
        <description>9. Zip Code specified</description>
        <label>FNZCODESP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOTHMILSP__c</fullName>
        <description>1. Other family please specify is service member</description>
        <label>FOTHMILSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOTHMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Other family is service member</description>
        <label>FOTHMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPCHGCG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  Changes in placement or caregiver: Caregiver</description>
        <label>FPCHGCG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPCHGLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  Changes in placement or caregiver: Legal guardian</description>
        <label>FPCHGLG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPCHGOTHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  Changes in placement or caregiver: Other</description>
        <label>FPCHGOTHR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPCHGPL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  Changes in placement or caregiver: Placement</description>
        <label>FPCHGPL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPCHGSP__c</fullName>
        <description>8.  Changes in placement or caregiver: Other Specified</description>
        <label>FPCHGSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPCHG__c</fullName>
        <description>8.  Have there been any changes in placement or caregiver since the last interview (Baseline or Follow up)?</description>
        <label>FPCHG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPINANY__c</fullName>
        <description>2. Is the child&apos;s parent/guardian covered by any type of insurance?</description>
        <label>FPINANY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPINCHIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance CHIP</description>
        <label>FPINCHIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPINFFS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance Fee-for-Service</description>
        <label>FPINFFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPINHMO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance HMO</description>
        <label>FPINHMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPINIH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance Indian Health</description>
        <label>FPINIH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPINMEDD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance Medicaid</description>
        <label>FPINMEDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPINMEDR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance Medicare</description>
        <label>FPINMEDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPINMHC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance is Military Health</description>
        <label>FPINMHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPINOPRI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance Other Private</description>
        <label>FPINOPRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPINOPRS__c</fullName>
        <description>2a. Parent&apos;s insurance Other Private Specified</description>
        <label>FPINOPRS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPINOPSP__c</fullName>
        <description>2a. Parent&apos;s insurance Other Public Specified</description>
        <label>FPINOPSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPINOPUB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance Other Public</description>
        <label>FPINOPUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPINPPO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance PPO</description>
        <label>FPINPPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPINPRIV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance Private</description>
        <label>FPINPRIV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPINPUB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2a. Parent&apos;s insurance Public</description>
        <label>FPINPUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPRESMO__c</fullName>
        <description>2.  How many months has the child been living in this setting?</description>
        <label>FPRESMO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPRETR__c</fullName>
        <description>5.  Has any previously experienced trauma been revealed?</description>
        <label>FPRETR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPRIMRES__c</fullName>
        <description>1.  Where is the child&apos;s current primary residence?</description>
        <label>FPRIMRES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPRIMRSP__c</fullName>
        <description>1. Current primary residence Other Specified</description>
        <label>FPRIMRSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPROHPL__c</fullName>
        <description>3. During the course of the child’s life how many out of home placements has he/she had (i.e. Foster care, Group home, Correctional facility)?</description>
        <label>FPROHPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FRSTATASY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>12. If Yes: What is the child&apos;s current status?  = Asylee (formally going through a legal process to become an asylee because of fear of persecution in their country of origin)</description>
        <label>FRSTATASY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FRSTATIMM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>12. If Yes: What is the child&apos;s current status?  = Immigrant</description>
        <label>FRSTATIMM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FRSTATNONE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>12. If Yes: What is the child&apos;s current status?  = None</description>
        <label>FRSTATNONE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FRSTATREF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>12. If Yes: What is the child&apos;s current status?  = Refugee (U.S. government refugee status,&quot;A refugee is someone who has been forced to flee his or her country because of persecution, war, or violence&quot;)</description>
        <label>FRSTATREF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FRSTATUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>12. If Yes: What is the child&apos;s current status?  = Unknown</description>
        <label>FRSTATUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FRSTAT__c</fullName>
        <description>12. Has the child&apos;s refugee status changed since the last CIMI assessment?</description>
        <label>FRSTAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSELFMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Self is service member</description>
        <label>FSELFMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSISMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Sister is service member</description>
        <label>FSISMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTRTINJ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Injections is the treatment</description>
        <label>FTRTINJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTRTOMED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Oral medication is the treatment</description>
        <label>FTRTOMED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTRTOTHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Other is the treatment</description>
        <label>FTRTOTHR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTRTOTSP__c</fullName>
        <description>2. Other Specified is the treatment</description>
        <label>FTRTOTSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTRTPD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Prescribed diet is the treatment</description>
        <label>FTRTPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTRTPL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Physical limitations is the treatment</description>
        <label>FTRTPL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTRTUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Unknown is the treatment</description>
        <label>FTRTUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTRT__c</fullName>
        <description>2. Does the child have a current course of treatment?</description>
        <label>FTRT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTXACCUP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = Acupuncture</description>
        <label>FTXACCUP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXADVOC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = Advocacy activities</description>
        <label>FTXADVOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXAFCBT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Alternatives for Families: A Cognitive Behavioral Therapy (AF-CBT)</description>
        <label>FTXAFCBT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXARC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Attachment, Self-Regulation, and Competence (ARC)</description>
        <label>FTXARC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXATTACH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4.  Gen modality of treatment = Attachment-based therapy</description>
        <label>FTXATTACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXBEHATX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4.  Gen modality of treatment = Behavioral therapy</description>
        <label>FTXBEHATX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXBIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Trauma-Informed Brief Intervention Services (TIBIS)</description>
        <label>FTXBIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCARE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = Child-Adult Relationship Enhancement (CARE)</description>
        <label>FTXCARE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCBITS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Cognitive-Behavioral Intervention for Trauma in Schools (CBITS)</description>
        <label>FTXCBITS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCBTSRI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Combined Trauma-Focused Cognitive Behavioral Therapy(TF-CBT) and Selective Serotonin Reuptake Inhibitors (SSRI) Treatment</description>
        <label>FTXCBTSRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCDCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = Child Development-Community Policing Program (CDCP)</description>
        <label>FTXCDCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCLINIC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3.  Treatment setting is Clinic</description>
        <label>FTXCLINIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCMTFT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Culturally Modified Trauma-Focused Treatment (CM-TFT)</description>
        <label>FTXCMTFT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = Case management/ case coordination</description>
        <label>FTXCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCOGBEH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4.  Gen modality of treatment = Cognitive behavioral</description>
        <label>FTXCOGBEH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCOGTX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4.  Gen modality of treatment = Cognitive therapy</description>
        <label>FTXCOGTX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCOPE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = Community Outreach Program - Esperanza (COPE)</description>
        <label>FTXCOPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCOUNS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>9.  Clinician/ Provider = Therapist/Counselor</description>
        <label>FTXCOUNS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCPCGB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Combined Parent Child Cognitive-Behavioral Therapy: Empowering Families Who Are at Risk for Physical Abuse</description>
        <label>FTXCPCGB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCPP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Child-Parent Psychotherapy</description>
        <label>FTXCPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXCTTG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Trauma and Grief Component Therapy for Adolescents (TGCT-A)</description>
        <label>FTXCTTG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXDAYPAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3.  Treatment setting is Day treatment/partial hospitalization</description>
        <label>FTXDAYPAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXDAYTX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4.  Gen modality of treatment = Day treatment or partial hospitalization</description>
        <label>FTXDAYTX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXDBTSP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Adapted Dialectical Behavior Therapy for Special Population (DBT-SP)</description>
        <label>FTXDBTSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXDEBR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = Debriefing</description>
        <label>FTXDEBR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXEMDR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Eye Movement Desensitization and Reprocessing</description>
        <label>FTXEMDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXEXTX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4.  Gen modality of treatment = Expressive therapies (Drawing, movement, theater)</description>
        <label>FTXEXTX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXFAMTX__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4.  Gen modality of treatment = Family therapy</description>
        <label>FTXFAMTX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXFDTVIS__c</fullName>
        <description>2.  Family Therapy, # visits specified.</description>
        <label>FTXFDTVIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTXFDT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2.  Child has received Family or Dyadic therapy</description>
        <label>FTXFDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXGHDAY__c</fullName>
        <description>1.  Received treatment in Group Home, # days specified.</description>
        <label>FTXGHDAY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTXGH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1.  Received treatment in Group Home</description>
        <label>FTXGH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXGTADV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Group Treatment for Children Affected by Domestic Violence (GTADV)</description>
        <label>FTXGTADV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXGTVIS__c</fullName>
        <description>2.   Group Therapy, # visits specified.</description>
        <label>FTXGTVIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTXGT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2.  Child has received Group Therapy</description>
        <label>FTXGT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXHOME__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3.  Treatment setting is Home</description>
        <label>FTXHOME</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXHONMAK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = Honoring Children, Making Relatives (HC-MR)</description>
        <label>FTXHONMAK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXHONMEN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = Honoring Children, Mending the Circle (HC-MC)</description>
        <label>FTXHONMEN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXHONRES__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = Honoring Children, Respectful Ways (HC-RW)</description>
        <label>FTXHONRES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXHOSDAY__c</fullName>
        <description>1.  Received treatment in Hospital, # days specified</description>
        <label>FTXHOSDAY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTXHOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1.  Received treatment in Hospital.</description>
        <label>FTXHOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXIFACES__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = International Family Adult and Child Enhancement Services (IFACES)</description>
        <label>FTXIFACES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXIHS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4.  Gen modality of treatment = Intensive in-home services</description>
        <label>FTXIHS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXITCT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Integrative Treatment of Complex Trauma (ITCT)</description>
        <label>FTXITCT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXITCVIS__c</fullName>
        <description>2.  Individual therapy for Child, # visits specified</description>
        <label>FTXITCVIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTXITC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2.  Received Individual Therapy for Child</description>
        <label>FTXITC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXITPVIS__c</fullName>
        <description>2.  Individual therapy for Parent, # visits specified.</description>
        <label>FTXITPVIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTXITP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2.  Received Individual Therapy for Parent</description>
        <label>FTXITP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXLEADCLSP__c</fullName>
        <description>Please specify:</description>
        <label>FTXLEADCLSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTXLEADCL__c</fullName>
        <description>10.  Primary lead clinician/ provider</description>
        <label>FTXLEADCL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTXLFSKLS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Life Skills/Life Stories</description>
        <label>FTXLFSKLS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXMDEXT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>9.  Clinician/ Provider = Physician Extender</description>
        <label>FTXMDEXT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXMENTOR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>8.  PSI = Mentoring</description>
        <label>FTXMENTOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXMFGVIS__c</fullName>
        <description>2.  Multi-Family group therapy, # visits specified.</description>
        <label>FTXMFGVIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTXMFG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2.  Received Multi-Family group therapy</description>
        <label>FTXMFG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXMMTT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6.  SIP = Trauma-Focused Coping (TFC)/ Multimodality Trauma Treatment (MMTT)</description>
        <label>FTXMMTT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTXMODPRISP__c</fullName>
        <description>Please specify:</description>
        <label>FTXMODPRISP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>